--- a/src/commands/analyze.yml
+++ b/src/commands/analyze.yml
@@ -4,10 +4,24 @@ parameters:
     description: Specify the path of starting to search for files to analyze (Multiple paths can be specified by separating them with line feed)
     type: string
     default: "."
+  patterns-to-include:
+    description: Specify patterns to include by regular expression (Multiple patterns can be specified by separating them with line feed)
+    type: string
+    default: '.*\.coffee$'
+  patterns-to-exclude:
+    description: Specify patterns to exclude by regular expression (Multiple patterns can be specified by separating them with line feed)
+    type: string
+    default: |
+        ^\./\.git/.*
+        ^\./node_modules/.*
   analysis-arguments:
     description: Arguments of analysis command
     type: string
     default: ""
+  result-path:
+    description: Path to save analysis result
+    type: string
+    default: "/dev/null"
   no-analysis-output-timeout:
     description: Elapsed time the command can run without output. The string is a decimal with unit suffix, such as “20m”, “1.25h”, “5s”
     type: string
@@ -22,6 +36,10 @@ parameters:
     type: enum
     enum: ["/dev/stdout", "/dev/stderr", "/dev/null"]
     default: "/dev/null"
+  max-procs:
+    description: Specify the maximum number of processes to run at the same time
+    type: integer
+    default: 1
 steps:
   - dscar/analyze:
       step-name: Analyze code statically using CoffeeLint
@@ -33,14 +51,19 @@ steps:
               set -x
               cat \<<-EOT >> $BASH_ENV
               export TRANSFORMATION_ARGUMENTS=(
-                -rM
-                'to_entries | map((@html "<file name=\"\(.key)\">")+"\(.value | map(@html "<error source=\"\(.name)\" message=\"\(.message)\" severity=\"\(.level)\" line=\"\(.lineNumber)\" column=\"0\" />") | join(""))</file>") | "<checkstyle>\(join(""))</checkstyle>"'
+                -srM
+                'map(to_entries) | flatten | map((@html "<file name=\"\(.key)\">") + "\(.value | map(@html "<error source=\"\(.name)\" message=\"\(.message)\" severity=\"\(.level)\" line=\"\(.lineNumber)\" column=\"0\" />") | join(""))</file>") | "<checkstyle>\(join(""))</checkstyle>"'
               )
               EOT
         - steps: << parameters.prepare >>
       analysis-command: npx
       analysis-arguments: coffeelint << parameters.analysis-arguments >> --reporter=raw
       transformation-command: jq
+      should-find: "true"
       starting-points: << parameters.starting-points >>
+      patterns-to-include: << parameters.patterns-to-include >>
+      patterns-to-exclude: << parameters.patterns-to-exclude >>
+      result-path: << parameters.result-path >>
       no-output-timeout: << parameters.no-analysis-output-timeout >>
       redirecting-output: << parameters.redirecting-output >>
+      max-procs: << parameters.max-procs >>
