--- a/src/commands/install-analyzer.yml
+++ b/src/commands/install-analyzer.yml
@@ -1,3 +1,3 @@
 description: Install CoffeeLint
 steps:
-  - run: sudo npm install --global coffeelint
+  - run: sudo npm install --global @coffeelint/cli
