--- a/src/commands/analyze.yml
+++ b/src/commands/analyze.yml
@@ -18,6 +18,10 @@ parameters:
     description: Arguments of analysis command
     type: string
     default: ""
+  error-pattern:
+    description: Specify the pattern if you want to detect analyzing errors from the standard error
+    type: string
+    default: '.*'
   result-path:
     description: Path to save analysis result
     type: string
@@ -57,7 +61,8 @@ steps:
               EOT
         - steps: << parameters.prepare >>
       analysis-command: npx
-      analysis-arguments: coffeelint << parameters.analysis-arguments >> --reporter=raw
+      analysis-arguments: coffeelint << parameters.analysis-arguments >> -q --reporter=raw
+      error-pattern: << parameters.error-pattern >>
       transformation-command: jq
       should-find: "true"
       starting-points: << parameters.starting-points >>
